2014-01-07  Ti Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.
 * Added a return for an HTTP 1.0 response 200 OK
 * Added a return for a 'Content-type' of text/html
 * added a message header saying Hello World
 * added a body containing the server owner's name
 * added a princ.c.recv(1000) line to add more info 
 * added a function to handle connection
 * added a main function to handle server work
 * added links for the content, file, and image page
 * added support for POST requests
 * added support from multi/form data posts
 * added html tempaltes inherited form a base.html
 * refactored for WSGIus Brown  <t@Titus-MacBook-Air-2.local>
 * Added a file output and a jpeg image output 
 * Added Quixote demo apps
